# writting-tools

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: build.yml
e2e/: editor.spec.ts
electron/: main.cjs  preload.cjs
src/: App.css  App.tsx  index.css
src/components/: AboutModal.tsx  ChapterItem.tsx  Editor.tsx  ExportButton.tsx  LanguageTabs.tsx  Layout.tsx  MoodboardEditor.tsx  ProjectCard.tsx  ProjectForm.tsx  SectionItem.tsx  Sidebar.tsx  Toolbar.tsx
src/context/: AppContext.tsx
src/db/: index.ts  types.ts
src/db/__tests__/: index.test.ts
src/hooks/: useBookEditor.ts
src/hooks/__tests__/: useBookEditor.test.ts  useProjects.test.ts
src/pages/: BookEditor.tsx  Home.tsx  ProjectSettings.tsx
src/writing_tools/: __init__.py  analyzer.py  chapter.py  cli.py  formatter.py
src/writing_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_analyzer.py  test_chapter.py  test_cli.py  test_formatter.py
